Fix checkbox alignment and do not allow disabled checkboxes to be de-selected

--- a/server/webapp/WEB-INF/rails/app/assets/stylesheets/views/agents.scss
+++ b/server/webapp/WEB-INF/rails/app/assets/stylesheets/views/agents.scss
@@ -40,7 +40,7 @@
 
 .agent_header th.selector {
     padding: 0 2px 0 5px;
-    text-align: center;
+    text-align: right;
 }
 
 .agent_header th.hostname {
